# harmonyemissions

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: apollon_chf.yaml  betatron_default.yaml  chf3d_dodecahedral.yaml  chf3d_icosahedral_sel.yaml  chf3d_structured_vortex.yaml  chf_elinp.yaml  chf_gemini.yaml  chf_sel.yaml  chf_sel_array.yaml  cwe_default.yaml  dipole_surface_rom.yaml  dpm_contrast_scan.yaml  extreme_power_combined.yaml  gas_hhg_default.yaml  hapls_betatron.yaml  hapls_surface_hhg.yaml  polaris_cwe.yaml  rom_default.yaml  scan_example.yaml  yb_yag_hard_xray_scan.yaml
docs/: backends.md  chf.md  chf3d.md  ci.md  cli.md  combined_power.md  comparison.md  contrast.md  extreme_power.md  gallery.md  generate_images.py  hard_xray.md  instrument.md  overview.md  parallel.md  presets.md  theory.md  workflow.md
examples/: 01_rom_surface_hhg.ipynb  02_gas_hhg_lewenstein.ipynb  03_lwfa_betatron.ipynb  04_parameter_scan_tuning.ipynb  05_smilei_backend.ipynb  06_chf_gemini_replication.ipynb  07_denting_and_beam_profiles.ipynb  08_efficiency_rollover.ipynb  09_detector_response.ipynb  10_extreme_fields_roadmap.ipynb  11_source_comparison.ipynb  12_combined_power_geometries.ipynb  13_chf3d_dodecahedral.ipynb  14_extreme_power_combined.ipynb
scripts/: build_attenuation_tables.py
src/harmonyemissions/: __init__.py  beam.py  cli.py  config.py  contrast.py  io.py  laser.py  materials.py  presets.py  qed.py  runner.py  scan.py  spectrum.py  target.py  units.py  viz.py
src/harmonyemissions/accel/: __init__.py  backend.py  bessel.py  fft.py  jit.py
src/harmonyemissions/backends/: __init__.py  analytical.py  cupy.py  epoch.py  smilei.py
src/harmonyemissions/chf/: __init__.py  gain.py  geometry.py  modes.py  propagation.py  superposition.py  timing.py
src/harmonyemissions/data/: laser_presets.yaml
src/harmonyemissions/detector/: __init__.py  al_filter.py  deconvolve.py  filters.py  gamma_response.py  grating.py  hard_xray.py  instrument.py  ross_pair.py  scintillator.py  soft_xray.py
tests/: conftest.py  test_accel.py  test_backends.py  test_beam.py  test_betatron.py  test_betatron_extreme.py  test_bgp_scaling.py  test_bremsstrahlung.py  test_chf.py  test_chf3d_phase_c.py  test_cli.py  test_config.py  test_contrast.py  test_cse.py  test_cwe.py  test_denting.py  test_detector.py  test_detector_bands.py  test_extreme_power.py  test_filters.py  test_gamma_detector.py  test_gamma_primitives.py  test_ics.py  test_io.py  test_kalpha.py  test_laser.py  test_laser_array.py  test_lewenstein.py  test_materials.py  test_parallel.py  test_presets.py  test_properties.py  test_rom.py  test_runner.py  test_scan.py  test_smilei_deck.py  test_spectrum.py  test_spikes.py  test_surface_pipeline.py  test_target.py  (+2 more)
tests/benchmarks/: test_benchmarks.py
(+38 files in other folders)
